Added custom Login, Register and ForgotPassword pages Implement logic of Register page Added sessions Completed admin register form

--- a/Admin/pom.xml
+++ b/Admin/pom.xml
@@ -82,6 +82,7 @@
             <groupId>com.bgrent.library</groupId>
             <artifactId>Library</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
 
@@ -93,7 +94,6 @@
 
 
     </dependencies>
-
 
 
 
